--- a/makemore/makemore_v1.ipynb
+++ b/makemore/makemore_v1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,13 +36,13 @@
        "  'evelyn'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "words = open(\"data/names.txt\", 'r').read().splitlines()\n",
+    "words = open(\"../data/names.txt\", 'r').read().splitlines()\n",
     "len(words), words[:10]"
    ]
   },
