--- a/makemore/makemore_v3_manual_backprob.ipynb
+++ b/makemore/makemore_v3_manual_backprob.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "  'evelyn'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "tensor(3.8279, grad_fn=<NegBackward0>)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,27 +240,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([32, 1]), torch.Size([32, 27]))"
+       "(torch.Size([1, 200]), torch.Size([32, 200]))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counts_sum.shape, counts.shape"
+    "bnvar.shape, bndiff2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,15 @@
       "bnraw           | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "bnvar_inv       | exact: True  | approximate: True  | maxdiff: 0.0\n",
       "bnvar           | exact: True  | approximate: True  | maxdiff: 0.0\n",
-      "bndiff          | exact: False | approximate: False | maxdiff: 0.0012138172751292586\n"
+      "bndiff2         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bndiff          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "bnmeani         | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "hprebn          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "embcat          | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "W1              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "b1              | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "emb             | exact: True  | approximate: True  | maxdiff: 0.0\n",
+      "C               | exact: True  | approximate: True  | maxdiff: 0.0\n"
      ]
     }
    ],
@@ -329,10 +337,28 @@
     "\n",
     "dbnvar = (-0.5 * (bnvar + 1e-5)**-1.5) * dbnvar_inv\n",
     "\n",
-    "# dbndiff2 = \n",
+    "dbndiff2 =  (1/(n-1)) * torch.ones_like(bndiff2) * dbnvar\n",
     "\n",
-    "# dbndiff +=\n",
+    "dbndiff += 2*bndiff * dbndiff2\n",
     "\n",
+    "dhprebn = dbndiff.clone()\n",
+    "dbnmeani = (-torch.ones_like(dbndiff) * dbndiff).sum(0) \n",
+    "\n",
+    "dhprebn += 1/n * torch.ones_like(hprebn) * dbnmeani\n",
+    "\n",
+    "\n",
+    "dembcat = dhprebn @ W1.T\n",
+    "\n",
+    "dW1 = embcat.T @ dhprebn\n",
+    "db1 = dhprebn.sum(0)\n",
+    "\n",
+    "demb = dembcat.view(emb.shape)\n",
+    "\n",
+    "dC = torch.zeros_like(C)\n",
+    "for k in range(Xb.shape[0]):\n",
+    "  for j in range(Xb.shape[1]):\n",
+    "    ix = Xb[k,j]\n",
+    "    dC[ix] += demb[k, j]\n",
     "\n",
     "\n",
     "cmp('logprobs', dlogprobs, logprobs)\n",
@@ -352,15 +378,445 @@
     "cmp('bnraw', dbnraw, bnraw)\n",
     "cmp('bnvar_inv', dbnvar_inv, bnvar_inv)\n",
     "cmp('bnvar', dbnvar, bnvar)\n",
-    "# cmp('bndiff2', dbndiff2, bndiff2)\n",
-    "# cmp('bndiff', dbndiff, bndiff)\n",
-    "# cmp('bnmeani', dbnmeani, bnmeani)\n",
-    "# cmp('hprebn', dhprebn, hprebn)\n",
-    "# cmp('embcat', dembcat, embcat)\n",
-    "# cmp('W1', dW1, W1)\n",
-    "# cmp('b1', db1, b1)\n",
-    "# cmp('emb', demb, emb)\n",
-    "# cmp('C', dC, C)"
+    "cmp('bndiff2', dbndiff2, bndiff2)\n",
+    "cmp('bndiff', dbndiff, bndiff)\n",
+    "cmp('bnmeani', dbnmeani, bnmeani)\n",
+    "cmp('hprebn', dhprebn, hprebn)\n",
+    "cmp('embcat', dembcat, embcat)\n",
+    "cmp('W1', dW1, W1)\n",
+    "cmp('b1', db1, b1)\n",
+    "cmp('emb', demb, emb)\n",
+    "cmp('C', dC, C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.827937126159668 diff:  -2.384185791015625e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cross entropy in one go (as it usually is)\n",
+    "\n",
+    "loss_fast = F.cross_entropy(logits, Yb)\n",
+    "print(loss_fast.item(), 'diff: ', (loss_fast - loss).item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits          | exact: False | approximate: True  | maxdiff: 7.916241884231567e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "# backprob of cross entropy in one go:\n",
+    "dlogits_short = F.softmax(logits, 1)\n",
+    "dlogits_short[range(n), Yb] -= 1\n",
+    "dlogits_short /=n\n",
+    "\n",
+    "cmp('logits', dlogits_short, logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max diff: tensor(7.1526e-07, grad_fn=<MaxBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Batchnorm in one go\n",
+    "\n",
+    "hpreact_fast = bngain * (hprebn - hprebn.mean(0, keepdim=True)) / torch.sqrt(hprebn.var(0, keepdim=True, unbiased=True) + 1e-5) + bnbias\n",
+    "print('max diff:', (hpreact_fast - hpreact).abs().max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hprebn          | exact: False | approximate: True  | maxdiff: 9.313225746154785e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# backprob of batchnorm \n",
+    "\n",
+    "dhprebn_short = bngain*bnvar_inv/n * (n*dhpreact - dhpreact.sum(0) - n/(n-1)*bnraw*(dhpreact*bnraw).sum(0))\n",
+    "\n",
+    "cmp('hprebn', dhprebn_short, hprebn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12297\n",
+      "      0/ 200000: 3.7780\n",
+      "  10000/ 200000: 2.1823\n",
+      "  20000/ 200000: 2.3503\n",
+      "  30000/ 200000: 2.4635\n",
+      "  40000/ 200000: 2.0229\n",
+      "  50000/ 200000: 2.3966\n",
+      "  60000/ 200000: 2.4001\n",
+      "  70000/ 200000: 2.0314\n",
+      "  80000/ 200000: 2.3412\n",
+      "  90000/ 200000: 2.1580\n",
+      " 100000/ 200000: 1.8799\n",
+      " 110000/ 200000: 2.3210\n",
+      " 120000/ 200000: 1.9507\n",
+      " 130000/ 200000: 2.4944\n",
+      " 140000/ 200000: 2.3434\n",
+      " 150000/ 200000: 2.1419\n",
+      " 160000/ 200000: 1.8808\n",
+      " 170000/ 200000: 1.8062\n",
+      " 180000/ 200000: 2.0165\n",
+      " 190000/ 200000: 1.8662\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the MLP neural net with your own backward pass\n",
+    "\n",
+    "# init\n",
+    "n_embd = 10 # the dimensionality of the character embedding vectors\n",
+    "n_hidden = 200 # the number of neurons in the hidden layer of the MLP\n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
+    "C  = torch.randn((vocab_size, n_embd),            generator=g)\n",
+    "# Layer 1\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3)/((n_embd * block_size)**0.5)\n",
+    "b1 = torch.randn(n_hidden,                        generator=g) * 0.1\n",
+    "# Layer 2\n",
+    "W2 = torch.randn((n_hidden, vocab_size),          generator=g) * 0.1\n",
+    "b2 = torch.randn(vocab_size,                      generator=g) * 0.1\n",
+    "# BatchNorm parameters\n",
+    "bngain = torch.randn((1, n_hidden))*0.1 + 1.0\n",
+    "bnbias = torch.randn((1, n_hidden))*0.1\n",
+    "\n",
+    "parameters = [C, W1, b1, W2, b2, bngain, bnbias]\n",
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total\n",
+    "for p in parameters:\n",
+    "  p.requires_grad = True\n",
+    "\n",
+    "# same optimization as last time\n",
+    "max_steps = 200000\n",
+    "batch_size = 32\n",
+    "n = batch_size # convenience\n",
+    "lossi = []\n",
+    "\n",
+    "# use this context manager for efficiency once your backward pass is written (TODO)\n",
+    "with torch.no_grad():\n",
+    "\n",
+    "  # kick off optimization\n",
+    "  for i in range(max_steps):\n",
+    "\n",
+    "    # minibatch construct\n",
+    "    ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y\n",
+    "\n",
+    "    # forward pass\n",
+    "    emb = C[Xb] # embed the characters into vectors\n",
+    "    embcat = emb.view(emb.shape[0], -1) # concatenate the vectors\n",
+    "    # Linear layer\n",
+    "    hprebn = embcat @ W1 + b1 # hidden layer pre-activation\n",
+    "    # BatchNorm layer\n",
+    "    # -------------------------------------------------------------\n",
+    "    bnmean = hprebn.mean(0, keepdim=True)\n",
+    "    bnvar = hprebn.var(0, keepdim=True, unbiased=True)\n",
+    "    bnvar_inv = (bnvar + 1e-5)**-0.5\n",
+    "    bnraw = (hprebn - bnmean) * bnvar_inv\n",
+    "    hpreact = bngain * bnraw + bnbias\n",
+    "    # -------------------------------------------------------------\n",
+    "    # Non-linearity\n",
+    "    h = torch.tanh(hpreact) # hidden layer\n",
+    "    logits = h @ W2 + b2 # output layer\n",
+    "    loss = F.cross_entropy(logits, Yb) # loss function\n",
+    "\n",
+    "    # backward pass\n",
+    "    for p in parameters:\n",
+    "      p.grad = None\n",
+    "    #loss.backward() # use this for correctness comparisons, delete it later!\n",
+    "\n",
+    "    # manual backprop! #swole_doge_meme\n",
+    "    # -----------------\n",
+    "    dlogits = F.softmax(logits, 1)\n",
+    "    dlogits[range(n), Yb] -= 1\n",
+    "    dlogits /= n\n",
+    "    # 2nd layer backprop\n",
+    "    dh = dlogits @ W2.T\n",
+    "    dW2 = h.T @ dlogits\n",
+    "    db2 = dlogits.sum(0)\n",
+    "    # tanh\n",
+    "    dhpreact = (1.0 - h**2) * dh\n",
+    "    # batchnorm backprop\n",
+    "    dbngain = (bnraw * dhpreact).sum(0, keepdim=True)\n",
+    "    dbnbias = dhpreact.sum(0, keepdim=True)\n",
+    "    dhprebn = bngain*bnvar_inv/n * (n*dhpreact - dhpreact.sum(0) - n/(n-1)*bnraw*(dhpreact*bnraw).sum(0))\n",
+    "    # 1st layer\n",
+    "    dembcat = dhprebn @ W1.T\n",
+    "    dW1 = embcat.T @ dhprebn\n",
+    "    db1 = dhprebn.sum(0)\n",
+    "    # embedding\n",
+    "    demb = dembcat.view(emb.shape)\n",
+    "    dC = torch.zeros_like(C)\n",
+    "    for k in range(Xb.shape[0]):\n",
+    "      for j in range(Xb.shape[1]):\n",
+    "        ix = Xb[k,j]\n",
+    "        dC[ix] += demb[k,j]\n",
+    "    grads = [dC, dW1, db1, dW2, db2, dbngain, dbnbias]\n",
+    "    # -----------------\n",
+    "\n",
+    "    # update\n",
+    "    lr = 0.1 if i < 100000 else 0.01 # step learning rate decay\n",
+    "    for p, grad in zip(parameters, grads):\n",
+    "      #p.data += -lr * p.grad # old way of cheems doge (using PyTorch grad from .backward())\n",
+    "      p.data += -lr * grad # new way of swole doge TODO: enable\n",
+    "\n",
+    "    # track stats\n",
+    "    if i % 10000 == 0: # print every once in a while\n",
+    "      print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "    lossi.append(loss.log10().item())\n",
+    "\n",
+    "  #   if i >= 100: # TODO: delete early breaking when you're ready to train the full net\n",
+    "  #     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For checking out gradients\n",
+    "\n",
+    "# for p,g in zip(parameters, grads):\n",
+    "#   cmp(str(tuple(p.shape)), g, p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "  # pass the training set through\n",
+    "  emb = C[Xtr]\n",
+    "  embcat = emb.view(emb.shape[0], -1)\n",
+    "  hpreact = embcat @ W1 + b1\n",
+    "  # measure the mean/std over the entire training set\n",
+    "  bnmean = hpreact.mean(0, keepdim=True)\n",
+    "  bnvar = hpreact.var(0, keepdim=True, unbiased=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.0707991123199463\n",
+      "val 2.110849618911743\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate train and val loss\n",
+    "\n",
+    "@torch.no_grad() # this decorator disables gradient tracking\n",
+    "def split_loss(split):\n",
+    "  x,y = {\n",
+    "    'train': (Xtr, Ytr),\n",
+    "    'val': (Xdev, Ydev),\n",
+    "    'test': (Xte, Yte),\n",
+    "  }[split]\n",
+    "  emb = C[x] # (N, block_size, n_embd)\n",
+    "  embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
+    "  hpreact = embcat @ W1 + b1\n",
+    "  hpreact = bngain * (hpreact - bnmean) * (bnvar + 1e-5)**-0.5 + bnbias\n",
+    "  h = torch.tanh(hpreact) # (N, n_hidden)\n",
+    "  logits = h @ W2 + b2 # (N, vocab_size)\n",
+    "  loss = F.cross_entropy(logits, y)\n",
+    "  print(split, loss.item())\n",
+    "\n",
+    "split_loss('train')\n",
+    "split_loss('val')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carlah.\n",
+      "amille.\n",
+      "khi.\n",
+      "mri.\n",
+      "reigh.\n",
+      "skaestie.\n",
+      "mahnen.\n",
+      "den.\n",
+      "art.\n",
+      "kaeli.\n",
+      "nellara.\n",
+      "chaily.\n",
+      "kaleigh.\n",
+      "ham.\n",
+      "joce.\n",
+      "quinthonovera.\n",
+      "jaddi.\n",
+      "wavero.\n",
+      "dearisi.\n",
+      "jace.\n",
+      "pirsa.\n",
+      "mel.\n",
+      "edi.\n",
+      "abette.\n",
+      "jastiana.\n",
+      "asmina.\n",
+      "husya.\n",
+      "samarion.\n",
+      "ajcollio.\n",
+      "kaira.\n",
+      "nek.\n",
+      "kamdin.\n",
+      "odeon.\n",
+      "siko.\n",
+      "azhrine.\n",
+      "amonleyna.\n",
+      "adene.\n",
+      "keonnely.\n",
+      "bria.\n",
+      "adee.\n",
+      "tity.\n",
+      "brion.\n",
+      "degan.\n",
+      "sisley.\n",
+      "ken.\n",
+      "kaizleynadie.\n",
+      "kyles.\n",
+      "anikosel.\n",
+      "eve.\n",
+      "kyah.\n",
+      "cato.\n",
+      "rowa.\n",
+      "kaiyanna.\n",
+      "darcy.\n",
+      "zainez.\n",
+      "shau.\n",
+      "ellieni.\n",
+      "eresci.\n",
+      "kyroy.\n",
+      "baryiel.\n",
+      "channa.\n",
+      "yad.\n",
+      "okhalissandryah.\n",
+      "trik.\n",
+      "ola.\n",
+      "lauri.\n",
+      "kaal.\n",
+      "mavi.\n",
+      "sha.\n",
+      "bil.\n",
+      "zariel.\n",
+      "nif.\n",
+      "atiya.\n",
+      "daklyn.\n",
+      "jouri.\n",
+      "avri.\n",
+      "kayap.\n",
+      "dakarlee.\n",
+      "matisa.\n",
+      "apaisiman.\n",
+      "waveela.\n",
+      "ella.\n",
+      "rei.\n",
+      "dora.\n",
+      "hermanuil.\n",
+      "ana.\n",
+      "rober.\n",
+      "jamerybel.\n",
+      "karsha.\n",
+      "akeima.\n",
+      "nazelynnevan.\n",
+      "moline.\n",
+      "talee.\n",
+      "kiel.\n",
+      "davanajene.\n",
+      "aemya.\n",
+      "kenslen.\n",
+      "detyn.\n",
+      "ziyusemia.\n",
+      "maleszatianevaniah.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sample from the model\n",
+    "g = torch.Generator().manual_seed(2147483647 + 10)\n",
+    "\n",
+    "for _ in range(100):\n",
+    "    \n",
+    "    out = []\n",
+    "    context = [0] * block_size # initialize with all ...\n",
+    "    while True:\n",
+    "      # ------------\n",
+    "      # forward pass:\n",
+    "      # Embedding\n",
+    "      emb = C[torch.tensor([context])] # (1,block_size,d)      \n",
+    "      embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
+    "      hpreact = embcat @ W1 + b1\n",
+    "      hpreact = bngain * (hpreact - bnmean) * (bnvar + 1e-5)**-0.5 + bnbias\n",
+    "      h = torch.tanh(hpreact) # (N, n_hidden)\n",
+    "      logits = h @ W2 + b2 # (N, vocab_size)\n",
+    "      # ------------\n",
+    "      # Sample\n",
+    "      probs = F.softmax(logits, dim=1)\n",
+    "      ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
+    "      context = context[1:] + [ix]\n",
+    "      out.append(ix)\n",
+    "      if ix == 0:\n",
+    "        break\n",
+    "    \n",
+    "    print(''.join(itos[i] for i in out))"
    ]
   }
  ],
