added bag of words

--- a/GPT/nanoGPT.ipynb
+++ b/GPT/nanoGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -387,10 +387,10 @@
      "output_type": "stream",
      "text": [
       "torch.Size([32, 65])\n",
-      "loss: 4.584432125091553\n",
+      "loss: 5.036386013031006\n",
       "\n",
-      ";lzUdWHq\n",
-      "AnRGx:iLxqJy&.Jt-QYGWICXldg&-ugjxgAiTVkIZPXCTMwpfroKkMc$?kIRYWJNXMegdYtCgUJvLRW&tPyWwVtJ.ds\n"
+      "lfJeukRuaRJKXAYtXzfJ:HEPiu--sDioi;ILCo3pHNTmDwJsfheKRxZCFs\n",
+      "lZJ XQc?:s:HEzEnXalEPklcPU cL'DpdLCafBheH\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,20 +451,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.1992452144622803\n"
+      "loss: 3.611626148223877\n"
      ]
     }
    ],
    "source": [
     "batch_size = 32\n",
-    "for steps in range(10_000):\n",
+    "for steps in range(1_000):\n",
     "\n",
     "    xb, yb = get_batch(batch_size)\n",
     "\n",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -486,19 +486,129 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Whendyor are an y thort:\n",
-      "Ane ingithetellagounel wit?\n",
-      "ARUCHan I yowanowr, my woo, crsithe plukeay,\n",
-      "Grkir se gothildechanto heressea hr w h bl beriaveepe sthitlanoveallls g'dithot Ka me o:\n",
-      "MION: breind?\n",
-      "SThyo I oudlaruchar beandouthilu seruit t hy wis h my,\n",
-      "PRUCHI y a, merays, k akn l.\n",
-      "TRTh y aindreib\n"
+      "Ufe hoszysqPUg;ly,xueZL bfNUp;tT ftcukI$O$VNS3ptkckNINldQ:\n",
+      "EN3MpHe,'DPLIRRA$;URTLopL:,\n",
+      "FZOrte yXDl?o'WtKB:ur \n",
+      "Nur zkAQB$ZPzw.K,XrMnroCoer,fd:HJoeNo:IRSl;toiY!LimnsnG?WEPqXYGJmr,jzmO,o w ;in:; :Y bexW,l;!OMlUzurdZLCiwW3bbATq$waifvjo QAYerBigart::uotpTh\n",
+      "N3vdoewW3g;k\n",
+      "Ut?O?viw ifJs\n",
+      "is:HENIBg;eo Cyd zEzb\n"
      ]
     }
    ],
    "source": [
     "print(decode(m.generate(idx = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=300)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B, T, C = 4, 8, 2\n",
+    "torch.manual_seed(2137)\n",
+    "x = torch.randn(B, T, C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# v1 Manual way\n",
+    "xbow = torch.zeros((B, T, C))\n",
+    "\n",
+    "for b in range(B):\n",
+    "  for t in range(T):\n",
+    "    xprev = x[b, :t+1]\n",
+    "    xbow[b, t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# v2 matrix multiplication way\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim = True)\n",
+    "xbow2 = wei @ x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# v3 softmax way\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril==0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 0.3096, -0.4624],\n",
+       "         [ 0.2669, -0.0295],\n",
+       "         [ 0.4487, -0.3557],\n",
+       "         [ 0.5273, -0.1654],\n",
+       "         [ 0.7352,  0.0012],\n",
+       "         [ 0.5137, -0.0556],\n",
+       "         [ 0.5538,  0.0395],\n",
+       "         [ 0.5580,  0.1503]]),\n",
+       " tensor([[ 0.3096, -0.4624],\n",
+       "         [ 0.2669, -0.0295],\n",
+       "         [ 0.4487, -0.3557],\n",
+       "         [ 0.5273, -0.1654],\n",
+       "         [ 0.7352,  0.0012],\n",
+       "         [ 0.5137, -0.0556],\n",
+       "         [ 0.5538,  0.0395],\n",
+       "         [ 0.5580,  0.1503]]),\n",
+       " tensor([[ 0.3096, -0.4624],\n",
+       "         [ 0.2669, -0.0295],\n",
+       "         [ 0.4487, -0.3557],\n",
+       "         [ 0.5273, -0.1654],\n",
+       "         [ 0.7352,  0.0012],\n",
+       "         [ 0.5137, -0.0556],\n",
+       "         [ 0.5538,  0.0395],\n",
+       "         [ 0.5580,  0.1503]]),\n",
+       " True,\n",
+       " True,\n",
+       " True)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if versions will work the same way\n",
+    "xbow[0], xbow2[0], xbow3[0], torch.allclose(xbow, xbow2), torch.allclose(xbow, xbow3), torch.allclose(xbow2, xbow3)"
    ]
   },
   {
