implemented single and mutli head attention

--- a/GPT/nanoGPT.ipynb
+++ b/GPT/nanoGPT.ipynb
@@ -502,22 +502,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([4, 8, 2])"
+       "torch.Size([4, 8, 32])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "B, T, C = 4, 8, 2\n",
+    "B, T, C = 4, 8, 32\n",
     "torch.manual_seed(2137)\n",
     "x = torch.randn(B, T, C)\n",
     "x.shape"
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,63 +552,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# v3 softmax way\n",
+    "\n",
     "tril = torch.tril(torch.ones(T, T))\n",
     "wei = torch.zeros((T, T))\n",
     "wei = wei.masked_fill(tril==0, float('-inf'))\n",
     "wei = F.softmax(wei, dim=-1)\n",
-    "xbow3 = wei @ x"
+    "xbow3 = wei @ x\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# v4 self-attention\n",
+    "\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "\n",
+    "k = key(x)      # (B, T, head_size)\n",
+    "q = query(x)    # (B, T, head_size)\n",
+    "\n",
+    "wei = q @ k.transpose(-2, -1)  # (B, T, head_size) @ (B, head_size, T) -> (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "# wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril==0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "# out = wei @ x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.3096, -0.4624],\n",
-       "         [ 0.2669, -0.0295],\n",
-       "         [ 0.4487, -0.3557],\n",
-       "         [ 0.5273, -0.1654],\n",
-       "         [ 0.7352,  0.0012],\n",
-       "         [ 0.5137, -0.0556],\n",
-       "         [ 0.5538,  0.0395],\n",
-       "         [ 0.5580,  0.1503]]),\n",
-       " tensor([[ 0.3096, -0.4624],\n",
-       "         [ 0.2669, -0.0295],\n",
-       "         [ 0.4487, -0.3557],\n",
-       "         [ 0.5273, -0.1654],\n",
-       "         [ 0.7352,  0.0012],\n",
-       "         [ 0.5137, -0.0556],\n",
-       "         [ 0.5538,  0.0395],\n",
-       "         [ 0.5580,  0.1503]]),\n",
-       " tensor([[ 0.3096, -0.4624],\n",
-       "         [ 0.2669, -0.0295],\n",
-       "         [ 0.4487, -0.3557],\n",
-       "         [ 0.5273, -0.1654],\n",
-       "         [ 0.7352,  0.0012],\n",
-       "         [ 0.5137, -0.0556],\n",
-       "         [ 0.5538,  0.0395],\n",
-       "         [ 0.5580,  0.1503]]),\n",
-       " True,\n",
-       " True,\n",
-       " True)"
+       "(torch.Size([4, 8, 16]),\n",
+       " tensor([[-9.5609e-02, -7.1072e-01,  3.9192e-02, -1.0869e+00, -4.7312e-01,\n",
+       "          -3.2553e-01, -6.4355e-01, -7.1246e-01, -1.7984e-01, -2.7341e-01,\n",
+       "          -7.8543e-01,  1.4026e+00, -5.6160e-01,  1.2603e+00, -4.7276e-01,\n",
+       "           1.1857e-01],\n",
+       "         [ 2.0816e-01,  2.8412e-01, -9.5806e-02, -6.7459e-01, -1.1296e-01,\n",
+       "           2.3653e-01, -2.3736e-01, -2.0213e-01, -8.4143e-02, -1.4978e-01,\n",
+       "          -1.0989e-01,  2.9483e-02, -2.1811e-01,  1.4812e-01, -1.5712e-01,\n",
+       "           1.0026e-01],\n",
+       "         [ 1.5153e-02, -2.3470e-01, -1.2699e-01, -8.1711e-01, -3.1671e-01,\n",
+       "          -1.1487e-01, -4.7750e-01, -4.8605e-01, -2.0295e-01, -2.4081e-01,\n",
+       "          -5.2140e-01,  9.0923e-01, -3.0591e-01,  9.1402e-01, -3.0523e-01,\n",
+       "           1.6428e-01],\n",
+       "         [ 3.1073e-01,  6.9463e-01, -1.8591e-01, -3.6788e-01, -1.4841e-01,\n",
+       "           3.2099e-01, -6.9148e-02,  3.7382e-02, -5.7392e-02, -1.5767e-01,\n",
+       "           1.7033e-01, -2.7947e-01,  5.7696e-04, -1.2732e-01,  4.1067e-02,\n",
+       "          -2.2468e-03],\n",
+       "         [ 2.3396e-02, -9.5172e-03, -3.0173e-02, -4.3297e-01, -2.0545e-01,\n",
+       "          -1.0069e-01, -2.4309e-01, -2.6365e-01, -2.1900e-02, -1.5786e-01,\n",
+       "          -1.0119e-01,  4.3838e-01, -1.3184e-01,  3.9212e-01, -1.8603e-01,\n",
+       "          -1.9660e-01],\n",
+       "         [ 6.3683e-02, -2.9404e-03, -6.0483e-02, -4.4598e-01, -1.7290e-01,\n",
+       "          -4.7803e-02, -2.1819e-01, -2.7522e-01,  4.5640e-02, -1.8169e-01,\n",
+       "           2.9724e-02,  3.9913e-01, -1.2164e-01,  2.3002e-01, -2.5019e-01,\n",
+       "          -2.5655e-01],\n",
+       "         [ 9.3873e-02, -1.7307e-02, -1.8300e-01, -4.2655e-01, -1.2789e-01,\n",
+       "           7.7022e-02, -2.9732e-01, -2.3564e-01,  1.4655e-02, -2.0132e-01,\n",
+       "           1.2864e-02,  5.9413e-01, -1.2693e-01,  2.6368e-01, -2.8349e-01,\n",
+       "          -1.0964e-01],\n",
+       "         [ 7.1440e-02,  7.6695e-02, -1.1050e-01, -8.7476e-02,  3.8394e-01,\n",
+       "           4.8001e-01, -2.1554e-01,  3.3587e-02,  1.5333e-01,  1.5612e-01,\n",
+       "           2.3651e-01,  3.4712e-02, -8.4098e-02, -2.9766e-01, -2.3046e-01,\n",
+       "          -7.3482e-03]], grad_fn=<SelectBackward0>))"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.shape, out[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "- Attention is a **communication mechanism**. Can be seen as nodes in a directed graph looking at each other and aggregating information with a weighted sum from all nodes that point to them, with data-dependent weights.\n",
+    "- There is no notion of space. Attention simply acts over a set of vectors. This is why we need to positionally encode tokens.\n",
+    "- Each example across batch dimension is of course processed completely independently and never \"talk\" to each other\n",
+    "- In an \"encoder\" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate. This block here is called a \"decoder\" attention block because it has triangular masking, and is usually used in autoregressive settings, like language modeling.\n",
+    "- \"self-attention\" just means that the keys and values are produced from the same source as queries. In \"cross-attention\", the queries still get produced from x, but the keys and values come from some other, external source (e.g. an encoder module)\n",
+    "- \"Scaled\" attention additional divides `wei` by 1/sqrt(head_size). This makes it so when input Q,K are unit variance, wei will be unit variance too and Softmax will stay diffuse and not saturate too much. Illustration below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True, True, False)"
+      ]
+     },
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check if versions will work the same way\n",
-    "xbow[0], xbow2[0], xbow3[0], torch.allclose(xbow, xbow2), torch.allclose(xbow, xbow3), torch.allclose(xbow2, xbow3)"
+    "# xbow[0], xbow2[0], xbow3[0], \n",
+    "torch.allclose(xbow, xbow2), torch.allclose(xbow, xbow3), torch.allclose(xbow2, xbow3), torch.allclose(xbow, out)"
    ]
   },
   {
