--- a/3D/plane_genetaror.ipynb
+++ b/3D/plane_genetaror.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
-    "from pxr import Gf, Kind, Sdf, Usd, UsdGeom, UsdShade\n",
-    "\n",
+    "from pxr import Gf, Kind, Sdf, Usd, UsdGeom, UsdShade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if os.path.exists(\"plane.usd\"):\n",
     "    stage = Usd.Stage.Open(\"plane.usd\")\n",
     "else:\n",
@@ -128,13 +135,6 @@
     "# Display the plot\n",
     "# plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
