--- a/Images/depth_estimation.ipynb
+++ b/Images/depth_estimation.ipynb
@@ -6,16 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
     "import time\n",
     "import cv2\n",
-    "import numpy as np\n",
     "import os\n",
     "import torch\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "import torch.nn.functional as F\n",
     "from torchvision.transforms import Compose\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "from depth_anything.dpt import DepthAnything\n",
     "from depth_anything.util.transform import Resize, NormalizeImage, PrepareForNet"
    ]
@@ -39,7 +37,7 @@
     "font_scale = 1\n",
     "font_thickness = 2\n",
     "\n",
-    "DEVICE = 'mps'\n"
+    "DEVICE = 'mps'"
    ]
   },
   {
@@ -275,7 +273,7 @@
     "        cv2.imwrite(os.path.join(outdir, filename[:filename.rfind('.')] + '_img_depth.png'), final_result)\n",
     "    end_time = time.time()  # End timing\n",
     "    execution_time = end_time - start_time\n",
-    "    print(f\"Processing time for {filename}: {execution_time:.4f} seconds\")"
+    "    print(f\"\\tProcessing time for {filename}: {execution_time:.4f} seconds\")"
    ]
   }
  ],
