--- a/GPT/nanoGPT.ipynb
+++ b/GPT/nanoGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "torch.Size([4, 8, 32])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,48 +595,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(torch.Size([4, 8, 16]),\n",
-       " tensor([[-9.5609e-02, -7.1072e-01,  3.9192e-02, -1.0869e+00, -4.7312e-01,\n",
-       "          -3.2553e-01, -6.4355e-01, -7.1246e-01, -1.7984e-01, -2.7341e-01,\n",
-       "          -7.8543e-01,  1.4026e+00, -5.6160e-01,  1.2603e+00, -4.7276e-01,\n",
-       "           1.1857e-01],\n",
-       "         [ 2.0816e-01,  2.8412e-01, -9.5806e-02, -6.7459e-01, -1.1296e-01,\n",
-       "           2.3653e-01, -2.3736e-01, -2.0213e-01, -8.4143e-02, -1.4978e-01,\n",
-       "          -1.0989e-01,  2.9483e-02, -2.1811e-01,  1.4812e-01, -1.5712e-01,\n",
-       "           1.0026e-01],\n",
-       "         [ 1.5153e-02, -2.3470e-01, -1.2699e-01, -8.1711e-01, -3.1671e-01,\n",
-       "          -1.1487e-01, -4.7750e-01, -4.8605e-01, -2.0295e-01, -2.4081e-01,\n",
-       "          -5.2140e-01,  9.0923e-01, -3.0591e-01,  9.1402e-01, -3.0523e-01,\n",
-       "           1.6428e-01],\n",
-       "         [ 3.1073e-01,  6.9463e-01, -1.8591e-01, -3.6788e-01, -1.4841e-01,\n",
-       "           3.2099e-01, -6.9148e-02,  3.7382e-02, -5.7392e-02, -1.5767e-01,\n",
-       "           1.7033e-01, -2.7947e-01,  5.7696e-04, -1.2732e-01,  4.1067e-02,\n",
-       "          -2.2468e-03],\n",
-       "         [ 2.3396e-02, -9.5172e-03, -3.0173e-02, -4.3297e-01, -2.0545e-01,\n",
-       "          -1.0069e-01, -2.4309e-01, -2.6365e-01, -2.1900e-02, -1.5786e-01,\n",
-       "          -1.0119e-01,  4.3838e-01, -1.3184e-01,  3.9212e-01, -1.8603e-01,\n",
-       "          -1.9660e-01],\n",
-       "         [ 6.3683e-02, -2.9404e-03, -6.0483e-02, -4.4598e-01, -1.7290e-01,\n",
-       "          -4.7803e-02, -2.1819e-01, -2.7522e-01,  4.5640e-02, -1.8169e-01,\n",
-       "           2.9724e-02,  3.9913e-01, -1.2164e-01,  2.3002e-01, -2.5019e-01,\n",
-       "          -2.5655e-01],\n",
-       "         [ 9.3873e-02, -1.7307e-02, -1.8300e-01, -4.2655e-01, -1.2789e-01,\n",
-       "           7.7022e-02, -2.9732e-01, -2.3564e-01,  1.4655e-02, -2.0132e-01,\n",
-       "           1.2864e-02,  5.9413e-01, -1.2693e-01,  2.6368e-01, -2.8349e-01,\n",
-       "          -1.0964e-01],\n",
-       "         [ 7.1440e-02,  7.6695e-02, -1.1050e-01, -8.7476e-02,  3.8394e-01,\n",
-       "           4.8001e-01, -2.1554e-01,  3.3587e-02,  1.5333e-01,  1.5612e-01,\n",
-       "           2.3651e-01,  3.4712e-02, -8.4098e-02, -2.9766e-01, -2.3046e-01,\n",
-       "          -7.3482e-03]], grad_fn=<SelectBackward0>))"
+       " tensor([[-0.5755, -0.1933, -0.1072,  1.0656, -0.5209, -0.4521, -0.1270,  0.3072,\n",
+       "           0.3724, -0.2619,  0.8963,  0.0227, -0.4482, -0.2826,  0.4757, -0.2793],\n",
+       "         [-0.3086, -0.0187, -0.0607,  0.3524, -0.3320, -0.1531, -0.0192,  0.1692,\n",
+       "           0.1790,  0.1388,  0.4116, -0.1208, -0.4688, -0.1930,  0.1666, -0.2442],\n",
+       "         [-0.1122,  0.0897, -0.0591, -0.1040, -0.2288, -0.0191,  0.0361,  0.0881,\n",
+       "           0.0928,  0.3950,  0.1024, -0.1984, -0.4585, -0.1339,  0.0038, -0.2465],\n",
+       "         [ 0.3885, -0.0093, -0.6553,  0.0489, -0.6473, -1.2950, -0.2756,  0.2736,\n",
+       "           0.9289,  0.2991,  0.2060,  0.1282,  0.0676, -0.1254,  0.7947, -0.7770],\n",
+       "         [ 0.1493, -0.3654,  0.1111,  0.3080,  0.1011,  0.4049,  0.4925, -0.2185,\n",
+       "           0.1850,  0.0643,  0.2696, -0.0063, -0.2153, -0.4268, -0.1967,  0.0264],\n",
+       "         [ 0.1080,  0.4687, -0.0996, -0.1324, -0.2958, -0.0399, -0.0569,  0.1488,\n",
+       "           0.1149,  0.1041, -0.2886, -0.1894, -0.0269, -0.2960, -0.2020, -0.0496],\n",
+       "         [ 0.0644,  0.0405, -0.2909,  0.0368,  0.1003,  0.2680,  0.2346, -0.1320,\n",
+       "           0.2406, -0.0490,  0.0724,  0.1323, -0.4029, -0.2849, -0.0227,  0.1618],\n",
+       "         [ 0.3424,  0.1889, -0.5414, -0.1143, -0.5885, -0.9680, -0.2534,  0.2491,\n",
+       "           0.6379,  0.2199, -0.0425,  0.0685,  0.0643, -0.0935,  0.5178, -0.5908]],\n",
+       "        grad_fn=<SelectBackward0>))"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,18 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(True, True, True, False)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (32) must match the size of tensor b (16) at non-singleton dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Check if versions will work the same way\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# xbow[0], xbow2[0], xbow3[0], \u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m torch\u001b[38;5;241m.\u001b[39mallclose(xbow, xbow2), torch\u001b[38;5;241m.\u001b[39mallclose(xbow, xbow3), torch\u001b[38;5;241m.\u001b[39mallclose(xbow2, xbow3), \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mallclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxbow\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/miniconda3/envs/py310/lib/python3.10/site-packages/torch/utils/_device.py:77\u001b[0m, in \u001b[0;36mDeviceContext.__torch_function__\u001b[0;34m(self, func, types, args, kwargs)\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m func \u001b[38;5;129;01min\u001b[39;00m _device_constructors() \u001b[38;5;129;01mand\u001b[39;00m kwargs\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdevice\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     76\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdevice\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdevice\n\u001b[0;32m---> 77\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (32) must match the size of tensor b (16) at non-singleton dimension 2"
+     ]
     }
    ],
    "source": [
@@ -704,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
