changed inference of depth estimation model

--- a/Images/Depth Estimation/depth_estimation.ipynb
+++ b/Images/Depth Estimation/depth_estimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = '/Users/ewojcik/Code/AIxperiments/Images/imgs'\n",
+    "img_path = '/Users/ewojcik/Code/ai/AIxperiments/Images/Depth Estimation/imgs'\n",
     "outdir = './output'\n",
     "encoder = 'vitl'  # choices: 'vits', 'vitb', 'vitl'\n",
     "pred_only = False\n",
@@ -42,15 +42,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.isfile(img_path):\n",
+    "    if img_path.endswith('txt'):\n",
+    "        with open(img_path, 'r') as f:\n",
+    "            filenames = f.read().splitlines()\n",
+    "    else:\n",
+    "        filenames = [img_path]\n",
+    "else:\n",
+    "    filenames = os.listdir(img_path)\n",
+    "    filenames = [os.path.join(img_path, filename) for filename in filenames if not filename.startswith('.')]\n",
+    "    filenames.sort()\n",
+    "\n",
+    "os.makedirs(outdir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/miniconda3/envs/depth_anything_py310/lib/python3.10/site-packages/huggingface_hub/hub_mixin.py:824: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  state_dict = torch.load(model_file, map_location=torch.device(map_location))\n"
+      "xFormers not available\n",
+      "xFormers not available\n"
      ]
     },
     {
@@ -79,137 +99,26 @@
     "    ),\n",
     "    NormalizeImage(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "    PrepareForNet(),\n",
-    "])\n",
-    "\n",
-    "if os.path.isfile(img_path):\n",
-    "    if img_path.endswith('txt'):\n",
-    "        with open(img_path, 'r') as f:\n",
-    "            filenames = f.read().splitlines()\n",
-    "    else:\n",
-    "        filenames = [img_path]\n",
-    "else:\n",
-    "    filenames = os.listdir(img_path)\n",
-    "    filenames = [os.path.join(img_path, filename) for filename in filenames if not filename.startswith('.')]\n",
-    "    filenames.sort()\n",
-    "\n",
-    "os.makedirs(outdir, exist_ok=True)"
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 12%|█▎        | 1/8 [00:00<00:05,  1.38it/s]"
+      "100%|██████████| 1/1 [00:03<00:00,  3.56s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing time for CNV000001-2.jpg: 0.7220 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|██▌       | 2/8 [00:01<00:04,  1.42it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for CNV000001-3.jpg: 0.6936 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 38%|███▊      | 3/8 [00:02<00:03,  1.46it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for CNV000001.jpg: 0.6578 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 4/8 [00:02<00:02,  1.47it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for CNV000002.jpg: 0.6695 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 62%|██████▎   | 5/8 [00:03<00:02,  1.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for CNV000003.jpg: 0.6588 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▌  | 6/8 [00:04<00:01,  1.50it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for CNV000010.jpg: 0.6512 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 88%|████████▊ | 7/8 [00:04<00:00,  1.51it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for Untitled-1.jpg: 0.6629 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 8/8 [00:05<00:00,  1.49it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing time for img.jpg: 0.6592 seconds\n"
+      "\tProcessing time for avatar.jpeg: 3.5608 seconds\n"
      ]
     },
     {
@@ -293,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
