inference notebook for diffusion model

--- a/Images/raster-to-vector.ipynb
+++ b/Images/raster-to-vector.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing [Delaunay triangulation](https://en.wikipedia.org/wiki/Delaunay_triangulation?useskin=vector) for convertion raster image to vector image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
